--- a/frontend/src/styles/product/ProductDetailInfo.scss
+++ b/frontend/src/styles/product/ProductDetailInfo.scss
@@ -20,6 +20,11 @@
 
 .ProductDetailInfo-desc {
   // padding-left: 10px;
+  white-space: pre-wrap;      /* CSS3 */
+  word-wrap: break-word;
+  max-width: 300px;
+  min-width: 200px;
+  width: 100%;
 }
 
 .ProductDetailInfo-dot {
